--- a/pom.xml
+++ b/pom.xml
@@ -128,5 +128,10 @@
       <artifactId>poi-ooxml</artifactId>
       <version>3.15-beta1</version>
     </dependency>
+    <dependency>
+      <groupId>com.ibm.watson.developer_cloud</groupId>
+      <artifactId>alchemy</artifactId>
+      <version>3.5.1</version>
+    </dependency>
   </dependencies>
 </project>
